# imgw_api_wrapper

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/imgw_api_wrapper/: __init__.py  imgw.py
src/imgw_api_wrapper_crazyjerz/: imgw.py
